--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 body {
     font-family: 'Quicksand', sans-serif;
-    background-color: #b3bec0;
+    background-color: #bdc3c4;
     text-align: center;
 
 }
